--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,8 @@ input#username:placeholder-shown, input#password:placeholder-shown {
 i ~ p {
     padding: 15px;
 }
+
+#forumBody .card {
+    padding: 5px;
+    padding-left: 10px;
+}
