--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,11 @@ i ~ p {
     padding: 5px;
     padding-left: 10px;
 }
+
+.postBody {
+    padding: 5px;
+    padding-left: 10px;
+}
 .col.s12.m4.l4 a {
     color: #2f2f2f;
 }
